samples/_failures_safe/1761507579_6a5142_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_144d6af9.c: In function ‘main’:
./samples/SAFE/__tmp_144d6af9.c:151:25: error: expected ‘)’ at end of input
  151 |     add_edge(&g, 3, 5, 6
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_144d6af9.c:151:5: error: expected declaration or statement at end of input
  151 |     add_edge(&g, 3, 5, 6
      |     ^~~~~~~~
